Update and rename example.wrangler.toml to wrangler.toml

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,5 +4,5 @@ compatibility_date = "2024-10-03"
 
 [[d1_databases]]
 binding = "NEWSNOW_DB"
-database_name = "newsnow-db"
-database_id = ""
+database_name = "newsnow"
+database_id = "130f6688-c201-46b9-8dde-4778406a0487"
