--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,9 +10,9 @@ database_id = "130f6688-c201-46b9-8dde-4778406a0487"
 #环境变量
 
 # Github Clien ID
-G_CLIENT_ID=Ov23lijty28RuCqKgkzE
+G_CLIENT_ID= "Ov23lijty28RuCqKgkzE"
 # Github Clien Secret
-G_CLIENT_SECRET=130f6688-c201-46b9-8dde-4778406a0487
+G_CLIENT_SECRET= "130f6688-c201-46b9-8dde-4778406a0487"
 # JWT Secret, 通常就用 Clien Secret
 JWT_SECRET=
 # 初始化数据库, 首次运行必须设置为 true，之后可以将其关闭
