--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,15 +7,9 @@ binding = "NEWSNOW_DB"
 database_name = "newsnow"
 database_id = "130f6688-c201-46b9-8dde-4778406a0487"
 
-#环境变量
-
-# Github Clien ID
+[vars]
 G_CLIENT_ID= "Ov23lijty28RuCqKgkzE"
-# Github Clien Secret
 G_CLIENT_SECRET= "130f6688-c201-46b9-8dde-4778406a0487"
-# JWT Secret, 通常就用 Clien Secret
 JWT_SECRET=
-# 初始化数据库, 首次运行必须设置为 true，之后可以将其关闭
 INIT_TABLE=true
-# 是否启用缓存
 ENABLE_CACHE=true
